# aws_exc

./: .gitignore  DEBUGGING.md  README.md  output.txt
lambda/: handler.py
terraform/: main.tf  outputs.tf  terraform.tfvar  terraform.tfvars.example  variables.tf
web_service/: .dockerignore  Dockerfile  pyproject.toml  terraform.tfstate
web_service/api/: views.py
web_service/config/: settings.py  urls.py
